--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -13,9 +16,7 @@ const pageTitle = "My Astro Learning Blog";
         <title>Astro</title>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Header />
 
   <h1>{pageTitle}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
@@ -24,5 +25,6 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    <Footer />
     </body>
 </html>
