Added new components and tags

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,7 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+
 
 
 const pageTitle = "About Me";
@@ -24,15 +23,8 @@ const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{pageTitle}</title>
-        <style define:vars={{skillColor,fontWeight,textCase}}>
+<BaseLayout pageTitle={pageTitle}>
+        <style is:global define:vars={{skillColor,fontWeight,textCase}}>
             h1 {
                 color: purple;
                 font-size: 4rem;
@@ -42,12 +34,7 @@ const textCase = "uppercase";
                 font-weight: var(--fontWeight);
                 text-transform: var(--textCase);
             }
-        </style>
-    </head>
-    <body>
-        <Header />
-
-        <h1>{pageTitle}</h1>
+            </style>
         <h2>... and my new Astro site!</h2>
 
         <p>
@@ -63,10 +50,7 @@ const textCase = "uppercase";
         <ul>
             <li>My name is {identity.firstName}.</li>
             <li>
-                I live in {identity.country} and I work as a {
-                    identity.occupation
-                }.
-            </li>
+                I live in {identity.country} and I work as a {identity.occupation}.</li>
             {
                 identity.hobbies.length >= 2 && (
                     <li>
@@ -91,6 +75,4 @@ const textCase = "uppercase";
                 <p>My goal is not 3 days.</p>
             )
         }
-        <Footer />
-    </body>
-</html>
+</BaseLayout>
